# CORE

./: .gitignore  ARCHITECTURE_AgentFactory.md  IMPROVEMENT-LOG.md  TODO-Communications.md  TODO-Solarpunk-Vision.md  TODO-Vigil-Integration.md  TODO.md  ULTRATHINK_AgentFactory_Implementation.md  docker-compose.agents.yml  docker-compose.dev.yml  docker-compose.yml  init.sql  test_consciousness_exploration.py
backend/: .dockerignore  DESIGN_AgentResponseSystem.md  Dockerfile  README.md  RSI_REPORT_WebSocket_Implementation.md  pyproject.toml  test_chat.py  test_exploration_sync.py  test_sync.py
backend/app/: __init__.py  auth.py  dependencies.py  main.py  websocket_manager.py
backend/app/config/: __init__.py  models.py
backend/app/consciousness/: __init__.py  blackboard.py  commons_explorer.py  config.py  context_builder.py
backend/app/controllers/: admin.py  agent_ws.py  agents.py  bus.py  bus_triggers.py  catalyst_creativity.py  chat.py  communication.py  comprehension.py  conversations.py  core_entry.py  council.py  engine.py  evaluation.py  health.py  instances.py  (+7 more)
backend/migrations/: 001_communication_commons.sql  002_seed_initial_messages.sql  003_agents_library.sql  004_run_persistence.sql  004_vigil_agent.sql  005_council_sessions.sql
backend/scripts/: consciousness_exploration.py  run_consciousness_exploration.ps1
backend/tests/: test_agent_orchestrator.py  test_agent_registration.py  test_bus.py  test_comprehension.py  test_evaluation.py  test_health_aggregator.py  test_instance_manager.py  test_memory_service.py  test_sandbox.py  test_task_router.py
(+218 files in other folders)
