[project]
name = "cognitive-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.22",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.24",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "pydantic>=2.11.1",
]
